<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEE"
    android:orientation="vertical" >

    <include layout="@layout/include_three_title_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <EditText
            android:digits="0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:id="@+id/abnormal_register_scan_billway_numbers_et"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/input_frame_wane_white_bg"
            android:hint="@string/input_or_scan_waybill_number"
            android:textSize="18sp" />

        <Button
            android:id="@+id/abnormal_register_scan_btn"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:background="@drawable/button_wane_blue_bg"
            android:text="@string/scan"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/input_frame_wane_white_bg"
        android:orientation="vertical" >

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/abnormal_reson"
            android:textSize="25sp" />

        <RadioGroup
            android:id="@+id/abmormal_register_rg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/damaged_rb"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/damaged"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/delay_rb"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/delay"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/lose_rb"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/lose"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/rejection_rb"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/rejection"
                android:textSize="20sp" />
        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/abnormal_register_submit_btn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_wane_blue_bg"
        android:text="@string/submit"
        android:textColor="#FFFFFF" />

</LinearLayout>