<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEE"
    android:orientation="vertical" >

    <include layout="@layout/include_three_title_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <EditText
            android:digits="0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:id="@+id/sign_in_input_billway_nuber_et"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/input_frame_wane_white_bg"
            android:hint="@string/input_or_scan_waybill_number"
            android:textSize="18sp" />

        <Button
            android:id="@+id/sign_in_scan_btn"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:background="@drawable/button_wane_blue_bg"
            android:text="@string/scan"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/recipient"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/sign_in_input_name_et"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:background="@drawable/input_frame_wane_white_bg"
            android:hint="@string/please_input_user_name"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/signature_take_photo"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:background="@drawable/input_frame_wane_white_bg"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/show_photo_iv"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/app_name" />

            <ImageButton
                android:id="@+id/take_photo_ib"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:background="@drawable/input_frame_wane_white_bg"
                android:contentDescription="@string/app_name"
                android:src="@drawable/picture_add_pressed"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/sign_in_submit_btn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_wane_blue_bg"
        android:text="@string/submit"
        android:textColor="#FFFFFF" />

</LinearLayout>