<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#004284"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20sp"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/input_frame_wane_white_bg"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/phone"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/input_phone_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/input_frame_wane_white_bg"
                android:gravity="center_vertical"
                android:inputType="phone"
                android:labelFor="@id/input_phone_et"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="#C9C9C9" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/password"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/input_password_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/input_frame_wane_white_bg"
                android:gravity="center_vertical"
                android:inputType="textPassword"
                android:labelFor="@id/input_password_et"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/member_password_cb"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@drawable/checkbox_frame_bg"
            android:padding="10dp"
            android:text="@string/memberpassword"
            android:textColor="#FFFFFF" />

        <CheckBox
            android:id="@+id/auto_login_cb"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@drawable/checkbox_frame_bg"
            android:padding="10dp"
            android:text="@string/autologin"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_wane_blue_bg"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

</LinearLayout>